# jterm

./: AGENTS.md  Cargo.toml
.opencode/artifacts/plans/: plan-2026-06-21-writerm-cursor-virtual-document-fixes.md
.opencode/bug-reports/: writerm-cursor-stuck-on-space.md
crates/jones-editor/: Cargo.toml
crates/jones-editor/src/: editor.rs  lib.rs
crates/jones-render/: Cargo.toml
crates/jones-render/src/: lib.rs  markdown.rs
crates/jones-terminal/src/: lib.rs
crates/jones-text/src/: lib.rs
crates/termite-editor/: Cargo.toml
crates/termite-editor/src/: lib.rs
crates/writerm/: Cargo.toml
crates/writerm-app/: Cargo.toml
crates/writerm-app/src/: app.rs  draw.rs  lib.rs  metrics.rs  visual.rs
crates/writerm-config/: Cargo.toml
crates/writerm-config/src/: lib.rs
crates/writerm/src/: main.rs
docs/: writerm-roadmap.md
